# mai_setting_by_pyside6

./: .gitignore  README.md  requirements.txt
Project/: main.py
Project/MainWindow/: MainWindow.py
Project/function/: change_port.py  config.py  multi_device.py  portediter.py  readme.md
Project/interface/: MainWindow.py  Qt_resource.qrc  dropdownbox.py  maiconfig.ui  main_window.py  main_window.ui  port_setting.py  port_setting.ui
Project/interface/function/: showport.py
Project/interface/resources/: maitouch.ai  meow.qrc
Project/my_project/: mai_deploy.ui  ui.py
documents/: comm_note.md  project_note.md  调试模式触摸传感器限制到30.md
ee_test/: CMakeLists.txt
ee_test/broads/: CMakeLists.txt
ee_test/broads/base/: CMakeLists.txt
ee_test/broads/base/stm32c8t6-standard/: CMakeLists.txt
ee_test/broads/base/stm32c8t6-standard/generate/: CMakeLists.txt
ee_test/broads/base/stm32c8t6-standard/generate/Core/Src/: freertos.c  stm32f1xx_it.c  usart.c
ee_test/broads/base/stm32c8t6-standard/generate/Drivers/CMSIS/Core_A/Include/: core_ca.h
ee_test/broads/base/stm32c8t6-standard/generate/Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/JTest/inc/: jtest_cycle.h  jtest_fw.h
ee_test/broads/base/stm32c8t6-standard/generate/Drivers/STM32F1xx_HAL_Driver/Inc/: stm32f1xx_hal_adc.h  stm32f1xx_hal_adc_ex.h
ee_test/broads/base/stm32c8t6-standard/generate/cmake/stm32cubemx/: CMakeLists.txt
ee_test/broads/drivers/: CMakeLists.txt
ee_test/broads/drivers/include/: oled096.h
ee_test/broads/drivers/src/: buzzer.cpp  oled096.cpp
ee_test/broads/platform/: CMakeLists.txt
ee_test/broads/platform/include/: bsp_print.h
ee_test/broads/platform/third_libs/printf/: printf.cmake
ee_test/broads/stm32c8t6/: CMakeLists.txt
ee_test/cmake/: build-helper.cmake  gcc-arm-none-eabi.cmake
ee_test/examples/: CMakeLists.txt
ee_test/examples/LED/: CMakeLists.txt
ee_test/examples/LED/Inc/: blueled.h  redled.h
ee_test/examples/LED/Src/: blueled.cpp
ee_test/examples/stm32c8t6-standard/: CMakeLists.txt
ee_test/examples/stm32c8t6-standard/LED/: CMakeLists.txt
ee_test/examples/stm32c8t6-standard/OLED/: CMakeLists.txt  oled.cpp
ee_test/examples/stm32c8t6-standard/buzzer/: CMakeLists.txt  testbuzzer.cpp
ee_test/pc_protocol/myrtos/broads/: CMakeLists.txt
ee_test/pc_protocol/myrtos/broads/drivers/include/: testbuzzer.h
ee_test/pc_protocol/myrtos/broads/platform/include/: bsp_uart.h
ee_test/pc_protocol/myrtos/broads/platform/src/: bsp_print.cpp
ee_test/pc_protocol/myrtos/broads/stm32c8t6/: myrtos.ioc
ee_test/pc_protocol/myrtos/broads/stm32c8t6/Core/Inc/: blueled.h  main.h
ee_test/pc_protocol/myrtos/broads/stm32c8t6/Core/Src/: gpio.c  main.c  stm32f1xx_hal_msp.c  system_stm32f1xx.c  tim.c
ee_test/pc_protocol/myrtos/cmake/: build-helper.cmake
ee_test/pc_protocol/myrtos/examples/: CMakeLists.txt
ee_test/pc_protocol/myrtos/examples/LED/Src/: main.cpp  redled.cpp
resources/: debug.qrc  debug_rc.py  meow.qrc
src/: main.py
src/models/: __init__.py  command_model.py  device_model.py  serial_model.py
src/tests/: testdevice.py  testpackage.py  testpyusb.py
src/ui/: 1.qrc  1_rc.py  mai_button.ui  mai_button_ui.py  maiconfig.ui  main_window.ui  main_window_ui.py
src/utils/: check_competence.py  cmd_handler.py  cmd_listener.py  debuglog.py  device_comm.py  omconfig.py  package_receive.py  port_utils.py  serial_utils.py  string_utils.py  svghandle.py  warning.py
src/views/: __init__.py  mai_button.py  main_window.py  port_setting.py
src/views/mai_button/: ButtonStatusWorker.py  mai_button.py
test/: deviceTest.py
